--- a/023player.html
+++ b/023player.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MucsicPlayer</title>
-    <link rel="stylesheet" href="023-1player.CSS" />
+    <link rel="stylesheet" href="023player.CSS" />
 </head>
 
 <body>
