feat(UI):add Carousel Navbar

--- a/038Card.html
+++ b/038Card.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-
+    <!-- jumbotron -->
     <div class="container">
         <div class="bg-success-subtle p-5 mt-3 rounded shadow jumbotron">
             <h1 class="fw-bold text-white textshdow">數位遊牧。一邊旅行一邊賺錢
@@ -37,22 +37,21 @@
             <button class="btn btn-success btn-lg">了解更多</button>
         </div>
 
-
-        <div class="card boreder-0 shadow mt-3"><!-- 無border + shadow=懸浮效果 -->
+        <!--card -->
+        <div class="card boreder-0 shadow mt-5"><!-- 無border + shadow=懸浮效果 -->
             <div class="row g-0">
                 <div class="col-lg-3">
                     <img src="photo/01.jpg" width="300" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-lg-9">
                     <div class="card-body">
-                        <h2 class="card-title fw-bold">吳哥窟</h2>
-                        <h4 class="card-text">瑪雅文化遺蹟瑪雅文化遺蹟瑪雅文化遺蹟瑪雅文化遺蹟
-                            瑪雅文化遺蹟瑪雅文化遺蹟瑪雅文化遺蹟瑪雅文化遺蹟瑪雅文化遺蹟瑪雅文化遺蹟
-                            瑪雅文化遺蹟瑪雅文化遺蹟瑪雅文化遺蹟瑪雅文化遺蹟瑪雅文化遺蹟瑪雅文化遺蹟
-                            瑪雅文化遺蹟瑪雅文化遺蹟瑪雅文化遺蹟瑪雅文化遺蹟瑪雅文化遺蹟瑪雅文化遺蹟
+                        <h2 class="card-title fw-bold">奇琴伊薩 -Chichen Itza</h2>
+                        <h4 class="card-text">是一處龐大的前哥倫布時期的考古遺址。
+                            奇琴伊察由瑪雅文明所建，坐落在今墨西哥境內的猶加敦半島北部猶加敦州，
+                            也是世界新七大奇蹟之一。
                         </h4>
                         <hr>
-                        <div class="d-grid gap-2 "> <!-- d-grid: 讓按鈕寬度自適應 -->
+                        <div class="d-grid gap-2"> <!-- d-grid: 讓按鈕寬度自適應 -->
                             <button class="btn btn-outline-success btn-lg">預定行程</button>
                         </div>
                     </div>
@@ -66,10 +65,10 @@
                 <div class="col-lg-9">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">吳哥窟</h2>
-                        <h4 class="card-text">吳哥窟吳哥窟吳哥窟吳哥窟吳哥窟吳哥窟吳哥窟吳哥窟
-                            吳哥窟吳哥窟吳哥窟吳哥窟吳哥窟,吳哥窟吳哥窟吳哥窟吳哥窟吳哥窟吳哥窟
-                            吳哥窟吳哥窟吳哥窟吳哥窟吳哥窟吳哥窟吳哥窟,吳哥窟吳哥窟吳哥窟吳哥窟
-                            吳哥窟吳哥窟,吳哥窟吳哥窟吳哥窟
+                        <h4 class="card-text">小吳哥城內的主要神廟建築群，
+                            位於柬埔寨暹粒省暹粒市北5.5公里。
+                            小吳哥正式名：聖毗濕奴路迦，是大吳哥城南的一座小型聖城，占地面積162.6公頃。
+                            吳哥窟是吳哥古都中保存得最完好的的聖殿，以建築宏偉與浮雕細緻聞名於世，是世界上最大的神廟。
 
                         </h4>
                         <hr>
@@ -84,7 +83,7 @@
             </div>
         </div>
 
-         <div class="card boreder-0 shadow mt-3"><!-- 無border + shadow=懸浮效果 -->
+        <div class="card boreder-0 shadow mt-3"><!-- 無border + shadow=懸浮效果 -->
             <div class="row g-0">
                 <div class="col-lg-3">
                     <img src="photo/03.jpg" width="300" class="img-fluid rounded-start" alt="...">
@@ -92,9 +91,9 @@
                 <div class="col-lg-9">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">下龍灣</h2>
-                        <h4 class="card-text">下龍灣下龍灣下龍灣，下龍灣下龍灣下龍灣下龍灣下龍灣
-                            下龍灣下龍灣下龍灣下龍，灣下龍灣下龍灣下龍灣下龍灣下龍灣下龍灣
-                            下龍灣下龍灣下龍灣，下龍灣下龍灣下龍灣下龍灣下龍灣下龍灣
+                        <h4 class="card-text">位於越南東北部，
+                            被廣寧省下龍市和海防市葛海縣所夾的一片面積為1,553平方千米的水域，
+                            是聯合國教科文組織世界遺產，也是越南廣寧省的熱門旅遊目的地。
                         </h4>
                         </h4>
                         <hr>
@@ -108,7 +107,6 @@
 
         <div class="card mt-3"><!-- 無border + shadow=懸浮效果 -->
             <div class="row g-0">
-
                 <div class="col-lg-9">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">埃及金字塔</h2>
