--- a/040Icon.html
+++ b/040Icon.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <style>
         .jumbotron {
             background-image: url('photo/16.jpg');
@@ -29,40 +29,35 @@
 <body>
 
     <div class="offcanvas offcanvas-bottom" tabindex="-1" id="PrivacyOffcanvas" aria-labelledby="offcanvasBottomLabel">
-
         <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasBottomLabel">隱私權政策</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" arial-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body small">
             隱私權政策隱私權政策隱私權政策
         </div>
-
-
     </div>
+
 
     <!-- Modal -->
     <div class="modal fade" id="LoginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog">
             <div class="modal-content">
-                <form class="needs-validation" novalidate metho="post" action="login.php">
+                <form class="needs-validation" novalidate method="post" action="login.php">
                     <div class="modal-header">
                         <h1>Login</h1>
-
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-
                         <div class="mb-3">
                             <label class="form-label" for="email"><span class="text-danger">*</span>E-mail</label>
                             <input type="email" required class="form-control" id="email"
                                 placeholder="YourEmail@email.com">
                             <div class="invalid-feedback">
-                                需填寫正確格式的E-mail
+                                需填寫正確E-mail
                             </div>
                         </div>
                         <div class="mb-3">
-
                             <label class="form-label" for="pwd"><span class="text-danger">*</span>Password</label>
                             <input type="password" minlength="8" maxlength="20" required class="form-control" id="pwd">
                             <div class="invalid-feedback">
@@ -73,7 +68,6 @@
                             <input type="checkbox" id="rememberme" class="form-check-input">
                             <label for="rememberme" class="form-check-label">Remember Me</label>
                         </div>
-
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -84,16 +78,15 @@
         </div>
     </div>
 
-
-
     <!-- jumbotron -->
     <div class="container">
         <div class="text-end">
+            <i class="bi bi-facebook" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="官方臉書"></i>
+            <i class="bi bi-line" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="官方Line"></i>
             <button class="btn btn-link" data-bs-toggle="modal" data-bs-target="#LoginModal">會員登入</button> |
             <button class="btn btn-link">聯絡我們</button> |
-            <button class="btn btn-link" data-bs-toggle="offcanvas" data-bs-target="#PrivacyOffcanvas">隱私權政策</button>
+            <button class="btn btn-link">隱私權政策</button>
         </div>
-
         <div class="bg-success-subtle p-5 mt-3 rounded shadow jumbotron">
             <h1 class="fw-bold text-white textshdow">數位遊牧。一邊旅行一邊賺錢
                 <p class="fw-bold text-white textshdow "><strong><small>新的目標 新的國家 全新的你</small></strong></p>
@@ -101,6 +94,7 @@
             <hr>
             <button class="btn btn-success btn-lg">了解更多</button>
         </div>
+
         <!-- card -->
         <div class="card boreder-0 shadow mt-3"><!-- 無border + shadow=懸浮效果 -->
             <div class="row g-0">
@@ -110,10 +104,10 @@
                 <div class="col-lg-9">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">奇琴伊薩 -Chichen Itza</h2>
-                        <h4 class="card-text">是一處龐大的前哥倫布時期的考古遺址。
+                        <p class="card-text">是一處龐大的前哥倫布時期的考古遺址。
                             奇琴伊察由瑪雅文明所建，坐落在今墨西哥境內的猶加敦半島北部猶加敦州，
                             也是世界新七大奇蹟之一。
-                        </h4>
+                        </p>
                         <hr>
                         <div class="d-grid gap-2 "> <!-- d-grid: 讓按鈕寬度自適應 -->
                             <button class="btn btn-outline-success btn-lg">預定行程</button>
@@ -129,15 +123,13 @@
                 <div class="col-lg-9">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">吳哥窟</h2>
-                        <h4 class="card-text">小吳哥城內的主要神廟建築群，
-                            位於柬埔寨暹粒省暹粒市北5.5公里。
-                            小吳哥正式名：聖毗濕奴路迦，是大吳哥城南的一座小型聖城，占地面積162.6公頃。
-                            吳哥窟是吳哥古都中保存得最完好的的聖殿，以建築宏偉與浮雕細緻聞名於世，是世界上最大的神廟。
-
-                        </h4>
+                        <p class="card-text">是一處龐大的前哥倫布時期的考古遺址。
+                            奇琴伊察由瑪雅文明所建，坐落在今墨西哥境內的猶加敦半島北部猶加敦州，
+                            也是世界新七大奇蹟之一。
+                        </p>
                         <hr>
                         <div class="d-grid gap-2 "> <!-- d-grid: 讓按鈕寬度自適應 -->
-                            <button class="btn btn-outline-success ">預定行程</button>
+                            <button class="btn btn-outline-success btn-lg">預定行程</button>
                         </div>
                     </div>
                 </div>
@@ -147,6 +139,7 @@
             </div>
         </div>
 
+
         <div class="card boreder-0 shadow mt-3"><!-- 無border + shadow=懸浮效果 -->
             <div class="row g-0">
                 <div class="col-lg-3">
@@ -155,11 +148,10 @@
                 <div class="col-lg-9">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">下龍灣</h2>
-                        <h4 class="card-text">位於越南東北部，
+                        <p class="card-text">位於越南東北部，
                             被廣寧省下龍市和海防市葛海縣所夾的一片面積為1,553平方千米的水域，
                             是聯合國教科文組織世界遺產，也是越南廣寧省的熱門旅遊目的地。
-                        </h4>
-                        </h4>
+                        </p>
                         <hr>
                         <div class="d-grid gap-2 "> <!-- d-grid: 讓按鈕寬度自適應 -->
                             <button class="btn btn-outline-success btn-lg">預定行程</button>
@@ -169,56 +161,15 @@
             </div>
         </div>
 
-        <div class="card mt-3"><!-- 無border + shadow=懸浮效果 -->
-            <div class="row g-0">
-
-                <div class="col-lg-9">
-                    <div class="card-body">
-                        <h2 class="card-title fw-bold">埃及金字塔</h2>
-                        <h4 class="card-text">埃及金字塔埃及金字塔埃及金字塔埃及金字塔
-                            埃及金字塔埃及金字塔埃及金字塔埃及金字塔埃及金字塔埃及金字塔
-                            埃及金字塔埃及金字塔埃及金字塔埃及金字塔,埃及金字塔埃及金字塔
-                            埃及金字塔,埃及金字塔
-                        </h4>
-                        <hr>
-                        <div class="d-grid gap-2 "> <!-- d-grid: 讓按鈕寬度自適應 -->
-                            <button class="btn btn-outline-success ">預定行程</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 text-end">
-                    <img src="photo/04.jpg" width="300" class="img-fluid rounded-end" alt="...">
-                </div>
-            </div>
-        </div>
-
-        <div class="card boreder-0 shadow mt-3"><!-- 無border + shadow=懸浮效果 -->
-            <div class="row g-0">
-                <div class="col-lg-3">
-                    <img src="photo/05.jpg" width="300" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-lg-9">
-                    <div class="card-body">
-                        <h2 class="card-title fw-bold">聖伯多祿大殿</h2>
-                        <h4 class="card-text">聖伯多祿大殿聖伯多祿大殿聖伯多祿大殿聖伯多祿大殿聖伯多祿大殿
-                            聖伯多祿大殿聖伯多祿大殿聖伯多祿大殿,聖伯多祿大殿聖伯多祿大殿聖伯多祿大殿
-                        </h4>
-                        <hr>
-                        <div class="d-grid gap-2 "> <!-- d-grid: 讓按鈕寬度自適應 -->
-                            <button class="btn btn-outline-success btn-lg">預定行程</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
-
+    <hr>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
 
     <script>
+        
         // Example starter JavaScript for disabling form submissions if there are invalid fields
         (() => {
             'use strict'
@@ -238,10 +189,10 @@
                 }, false)
             })
         })()
+
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
     </script>
-
-
-
 </body>
 
 </html>
