--- a/043Background.html
+++ b/043Background.html
@@ -8,9 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <style>
+    <link rel="stylesheet" href="043MyStyle.css">
 
-    </style>
 
 </head>
 
@@ -170,7 +169,7 @@
             </div>
             <div class="carousel-item">
                 <img src="photo/05.jpg" class="d-block w-100" alt="...">
-                <div class="carosel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-md-block">
                     <h2 class="fw-bold textshadow text-white">聖伯多祿大殿</h2>
                     <p>Some representative placeholder content for the first slide.</p>
                 </div>
@@ -289,35 +288,7 @@
             crossorigin="anonymous"></script>
 
 
-        <script>
-            // Example starter JavaScript for disabling form submissions if there are invalid fields
-            (() => {
-                'use strict'
-
-                // Fetch all the forms we want to apply custom Bootstrap validation styles to
-                const forms = document.querySelectorAll('.needs-validation')
-
-                // Loop over them and prevent submission
-                Array.from(forms).forEach(form => {
-                    form.addEventListener('submit', event => {
-                        if (!form.checkValidity()) {
-                            event.preventDefault()
-                            event.stopPropagation()
-                        }
-
-                        form.classList.add('was-validated')
-                    }, false)
-                })
-            })()
-
-
-            // 啟用Bootstrap的Tooltip
-            const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-            const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
-        </script>
-
-
-
+        <script src="043MyJS.JS"></script>
 </body>
 
 </html>
