feat(files):add and change a lot of notes inside MusicPlayer

--- a/009a.html
+++ b/009a.html
@@ -12,7 +12,7 @@
     <!-- 絕對路徑表示法 -->
     <a href="http://www.google.com.tw">點擊前往Google</a>
     <a href="https://www.youtube.com/">點擊前往Google</a>
-    <span style="color:blue;cursor: pointor;"><u>點擊前往Google</u></span>
+    <span style="color:blue;cursor: pointer;"><u>點擊前往Google</u></span>
 
     <hr>
 
