--- a/023player.html
+++ b/023player.html
@@ -4,28 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MucsicPlayer</title>
+    <title>MucsicPlayer_lesson</title>
     <link rel="stylesheet" href="023player.CSS" />
 </head>
 
 <body>
-    <audio src="music/AnytimeAnywhere.mp3" title="【Anytime Anywhere-milet】" controls id="myMusic"
+    <audio src="music/airball.mp3" title="【 告白氣球 】" controls id="myMusic"
         onended="musicStatus()"></audio>
     <hr>
 
-    <!-- 功能鈕 -->
+    <!-- 功能鈕區塊 -->
     <div id="controlPanel">
         <select id="musicList" onchange="changeMusic(0)">
-            <option value="music/AnytimeAnywhere.mp3"> 【 Anytime Anywhere-milet 】</option>
-            <option value="music/hakujistu.mp3">【 白日-King Gnu 】</option>
-            <option value="music/sayonaramataistuka.mp3"> 【 さよーならまたいつか-米津玄師 】</option>
-            <option value="music/tabun.mp3">【 たぶん-YOASOBI 】</option>
+            <option value="music/airball.mp3"> 【 告白氣球 】</option>
+            <option value="music/rain.mp3">【 雨 】</option>
+            <option value="music/moon.mp3"> 【 私奔到月球 】</option>
+            <option value="music/nothing.mp3">【 Nothing's gonna change my love for you 】</option>
         </select>
         <hr>
         <div id="functionButtons">
             <span onclick="playMusic()">4</span>
-            <!-- <span onclick="pauseMusic()">;</span> -->
-            <span onclick="stopMusic()">&lt;</span> <!-- 【&lt;】代換"<""-->
+            <!-- <span onclick="pauseMusic()">;</span> --> 
+             <!-- 因為跟播放鍵同顆按鈕，所以不需要這個按鈕註解掉了 -->
+            <span onclick="stopMusic()">&lt;</span> <!-- 【&lt;】代換"<"-->
             <span onclick="changeMusic(1)">9</span>
             <span onclick="changeTime(-5)">7</span>
             <span onclick="changeTime(+5)">8</span>
@@ -37,18 +38,19 @@
         </div>
         <hr>
         <div id="volumeControl">
+            <img src="photo/18.jpg" alt="假裝是分署logo" width="50px" height="50px">
             <input type="range" oninput="setVolumeByRangeBar()" value="50"><!-- 預設音量為50-->
-            <button onclick="changeVolume(1)">+</button>
             <button onclick="changeVolume(-1)">-</button>
+            <button onclick="changeVolume(1)">+</button>
             <input type="text" value="100" readonly><!-- DOM操作：顯示目前音量;volumeControl.children[3] -->
         </div>
         <hr>
-        <input type="range" id="progressBar" min="0" value="0" oninput="setProgress"> <!-- 進度條;progressBar -->
+        <input type="range" id="progressBar" min="0" value="0" oninput="setProgress()"> <!-- 進度條;progressBar -->
         <hr>
         <div id="information">
-            <div>00:00/00:00</div>
-            <div>播放器已失控</div>
-            <div>我放乖乖有用嗎QQ</div>
+            <div>00:00 / 00:00</div>
+            <div>播放器</div>
+            <div>教學版</div>
         </div>
     </div>
 
