--- a/023player.html
+++ b/023player.html
@@ -4,17 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MucsicPlayer_lesson</title>
+    <title>MusicPlayer_lesson</title>
     <link rel="stylesheet" href="023player.CSS" />
 </head>
 
 <body>
-    <audio src="music/airball.mp3" title="【 告白氣球 】" controls id="myMusic"
-        onended="musicStatus()"></audio>
+    <!-- 音樂播放器主體，
+     controls屬性顯示控制列，
+     onended="musicStatus()" 的意思是：
+     當 <audio> 播放完畢時，會自動呼叫 musicStatus() 這個函式。
+     會把播放器的狀態（例如進度條、播放按鈕、顯示資訊等）重設回初始狀態 -->
+    <audio src="music/airball.mp3" title="【 告白氣球 】" controls id="myMusic" onended="musicStatus()"></audio>
     <hr>
 
-    <!-- 功能鈕區塊 -->
+    <!-- 功能鈕區塊id="controlPanel"-->
     <div id="controlPanel">
+
+        <!-- 音樂清單id="musicList，選擇不同歌曲時觸發changeMusic(0) -->
         <select id="musicList" onchange="changeMusic(0)">
             <option value="music/airball.mp3"> 【 告白氣球 】</option>
             <option value="music/rain.mp3">【 雨 】</option>
@@ -22,10 +28,16 @@
             <option value="music/nothing.mp3">【 Nothing's gonna change my love for you 】</option>
         </select>
         <hr>
+
+        <div id="logoimage">
+            <img src="photo/18.jpg" alt="假裝是分署logo" width="300" height="300"  />
+        </div>
+
+        <!-- 播放器功能按鈕區 -->
         <div id="functionButtons">
             <span onclick="playMusic()">4</span>
-            <!-- <span onclick="pauseMusic()">;</span> --> 
-             <!-- 因為跟播放鍵同顆按鈕，所以不需要這個按鈕註解掉了 -->
+            <!-- <span onclick="pauseMusic()">;</span> -->
+            <!-- 因為跟播放鍵同顆按鈕，所以不需要這個按鈕註解掉了 -->
             <span onclick="stopMusic()">&lt;</span> <!-- 【&lt;】代換"<"-->
             <span onclick="changeMusic(1)">9</span>
             <span onclick="changeTime(-5)">7</span>
@@ -35,23 +47,27 @@
             <span onclick="loopOne()">q</span>
             <span onclick="setRandom()">s</span>
             <span onclick="loopAll()">`</span>
+            
         </div>
         <hr>
+        <!-- 音量控制區 -->
         <div id="volumeControl">
-            <img src="photo/18.jpg" alt="假裝是分署logo" width="50px" height="50px">
             <input type="range" oninput="setVolumeByRangeBar()" value="50"><!-- 預設音量為50-->
             <button onclick="changeVolume(-1)">-</button>
             <button onclick="changeVolume(1)">+</button>
             <input type="text" value="100" readonly><!-- DOM操作：顯示目前音量;volumeControl.children[3] -->
         </div>
         <hr>
+
         <input type="range" id="progressBar" min="0" value="0" oninput="setProgress()"> <!-- 進度條;progressBar -->
         <hr>
+
         <div id="information">
             <div>00:00 / 00:00</div>
             <div>播放器</div>
             <div>教學版</div>
         </div>
+
     </div>
 
     <script src="023player.js"></script>
