feat(js):when click stopmusic , the btnPlay turn to webdings "4" at the same time

--- a/023player.html
+++ b/023player.html
@@ -44,9 +44,9 @@
             <span onclick="changeTime(+5)">8</span>
             <span onclick="changeMusic(-1)">:</span>
             <span onclick="setMute()">U</span>
-            <span onclick="loopOne()">q</span>
-            <span onclick="setRandom()">s</span>
-            <span onclick="loopAll()">`</span>
+            <span onclick="setMode('單曲循環')">q</span>
+            <span onclick="setMode('隨機播放')">s</span>
+            <span onclick="setMode('全曲循環')">`</span>
             
         </div>
         
