feat(files):add jQuery learning demo

--- a/037Jumbotron.html
+++ b/037Jumbotron.html
@@ -14,7 +14,7 @@
             background-repeat: round;
         }
 
-        .textshadow {
+        .textShadow {
             text-shadow: 2px 2px 4px #000000;
         }
     </style>
